--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>flight-shedule</module>
-    </modules>
+		<module>currency-conversion</module>
+	</modules>
     <parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
