--- a/configuration-server/src/main/resources/application.properties
+++ b/configuration-server/src/main/resources/application.properties
@@ -3,3 +3,6 @@ server.port=5000
 
 spring.profiles.active=native
 spring.cloud.config.server.native.search-locations=file:///D:\\projects\\config-repo\\native\\{application}
+
+#spring.cloud.config.server.git.url=file:///D:\\projects_spring\\tofun
+#spring.cloud.config.server.git.search-paths={application}
