add simple Spring jpa and Jdbc

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,8 @@
         <module>configuration-server</module>
         <module>flight-site</module>
         <module>park</module>
-    </modules>
+		<module>spring-boot-jpa</module>
+	</modules>
     <parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
