add simple @OneToMany

--- a/spring-boot-jpa/src/main/resources/application.properties
+++ b/spring-boot-jpa/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.password=postgres
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-spring.jpa.hibernate.ddl-auto = none
+spring.jpa.hibernate.ddl-auto=create
 # create
 # none
 # update
