add simple @ManyToMany

--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,20 @@
         <module>flight-site</module>
         <module>park</module>
 		<module>spring-boot-jpa</module>
-	</modules>
+        <module>info-app</module>
+    </modules>
     <parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.5.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>1.8</java.version>
+	</properties>
 
 	<groupId>com.forfun</groupId>
 	<artifactId>flight</artifactId>
