--- a/info-app/src/main/resources/application.properties
+++ b/info-app/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 # Datasource
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE;IFEXISTS=false
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
